Fixed coloring on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3139,7 +3139,7 @@ button:disabled,
 @media screen and (max-width: 736px) {
     .features article {
         padding: 1.75em 1.75em 0.1em 1.75em;
-        background-color: #353849;
+        background-color: #F2F2F2;
         border-radius: 5px;
         margin: 1.5em 1.5em 1.5em 0;
         width: calc(25% - 1.5em); /* 4 columns by default */
